--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div> -->
             <div class="col-xs-12 col-lg-12 ">
                 <div class="col-xs-12 col-lg-4 hidden-xs">
-                    <img src="./img/MaNA.jpg" alt="Billede af Louise og Nanna med butiks navn">
+                    <img src="img/luna.jpg" alt="Billede af Louise og Nanna med butiks navn">
                 </div>
                 <div class="col-xs-12 col-lg-7">
                     <div class="col-xs-12 col-lg-12 center">
